<resources>
    <string name="app_name">Kandyvilla The Fashion Store</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="search">Search</string>
    <string name="styles_in_trend">Styles in trend</string>
    <string name="view_all">View all</string>
    <string name="explore_trends">Explore Trends</string>
    <string name="Recommendations">Recommended</string>
    <string name="categories">Categories</string>
    <string name="Rs">\u20B9</string>
    <string name="price">Price:</string>
    <string name="your_adress">Your Adress</string>
    <string name="phone_number">Phone number</string>
    <string name="your_email">Your Email</string>
    <string name="phone_numberc">Phone Number</string>
    <string name="your_address">Your Address</string>
    <string name="update">Update</string>
    <string name="category_name">Category name</string>
    <string name="description">Description</string>
    <string name="product_name">Product name</string>
    <string name="all_products">All Products</string>
    <string name="total_price">Total Price : 300$</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="popular_products">Popular Products</string>
    <string name="user_data">User Data</string>
    <string name="order_received">Order Received</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="add_new_popular">Add New Popular</string>
    <string name="add_product">Add Product</string>
    <string name="nav_categories">Nav Categories</string>
    <string name="products">Products</string>
    <string name="orders_received">Orders Received</string>
    <string name="update_product">Update Product</string>
    <string name="discount">Discount</string>
    <string name="searchproducts">Search</string>
    <string name="add_new_product">Add New Product</string>


</resources>