<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_newproducts"
            android:icon="@drawable/newproducts"
            android:title="@string/new_products" />

        <item
            android:id="@+id/nav_mycart"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/cart"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />

    </group>
</menu>