<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/rosewhite"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical"
    android:fillViewport="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressbar_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/heavypink"
        />


<ScrollView
    android:id="@+id/scrollview_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

       <androidx.appcompat.widget.SearchView
           android:id="@+id/searchbox"
           android:layout_marginTop="10dp"
           android:layout_marginStart="5dp"
           android:layout_marginEnd="5dp"
           app:queryHint="Search Products"
           app:iconifiedByDefault="false"
           android:clickable="true"
           android:background="@drawable/searchview_background"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchbox_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/categories"
                android:fontFamily="@font/bellezaregular"
                />

            <TextView
                android:id="@+id/view_explore_trends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/view_all"
                android:layout_marginEnd="7dp"
                android:gravity="end"
                android:textColor="@color/heavypink"
                android:fontFamily="@font/bellezaregular"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />




        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/styles_in_trend"
                android:fontFamily="@font/bellezaregular"
                />

            <TextView
                android:id="@+id/view_all_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/view_all"
                android:layout_marginEnd="7dp"
                android:gravity="end"
                android:textColor="@color/heavypink"
                android:fontFamily="@font/bellezaregular"
                />

        </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popularproducts"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        android:layout_margin="5dp"
        />

    </LinearLayout>

</ScrollView>
    </RelativeLayout>
</ScrollView>