<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/rosewhite"
    android:layout_height="match_parent"
    tools:context=".admin.activities.AdminActivity">

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/cover" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cardlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/applogo"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/userdata"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="7dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/users_admin" />

                <TextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/bellezaregular"
                    android:text="@string/user_data"
                    android:textColor="@color/indianred"
                    android:textSize="17dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/popularproducts"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_grey"
            android:padding="7dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/popular_products" />

                <TextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/bellezaregular"
                    android:text="@string/popular_products"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/indianred"
                    android:textSize="17dp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:id="@+id/cardlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardlayout"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/category"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_grey"
                android:padding="7dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_baseline_category_24" />

                    <TextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/bellezaregular"
                        android:text="@string/categories"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/indianred"
                        android:textSize="17dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/allproducts"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_grey"
                android:padding="7dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/products_admin" />

                    <TextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/bellezaregular"
                        android:text="@string/all_products"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/indianred"
                        android:textSize="17dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardlayout2"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/ordersreceived"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_grey"
                android:padding="7dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_baseline_orders_received_24" />

                    <TextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/bellezaregular"
                        android:text="@string/order_received"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/indianred"
                        android:textSize="17dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/logout"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_grey"
                android:padding="7dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_baseline_logout_24" />

                    <TextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/bellezaregular"
                        android:text="@string/log_out"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/indianred"
                        android:textSize="17dp"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>


</RelativeLayout>